--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ td {
   border-top: #196988 solid 1px;
 }
 
-button {
+.button-index {
   border: #196988 solid 1px;
   background: #196988;
   color: #ffffff;
